--- a/index.html
+++ b/index.html
@@ -282,29 +282,56 @@ border-radius:8px;
 color:var(--txt2);
 }
 
-.contact__item{
-display:flex;
-justify-content:center;
-align-items:center;
-gap:.8rem;
-margin-bottom:1.2rem;
-}
+.contact {
+      text-align: center;
+    }
 
-.contact__icon{
-width:40px;
-height:40px;
-border-radius:50%;
-background:var(--bg2);
-display:flex;
-align-items:center;
-justify-content:center;
-color:var(--acc2);
-}
+    .contact__content {
+      max-width: 600px;
+      margin: 0 auto;
+    }
 
-.contact__link{
-color:var(--acc2);
-font-weight:500;
-}
+    .contact__item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: var(--spacing-sm);
+      margin-bottom: var(--spacing-md);
+      font-size: 1.1rem;
+    }
+
+    .contact__icon {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: var(--color-bg-secondary);
+      border-radius: 50%;
+      color: var(--color-accent-secondary);
+      font-size: 1rem;
+    }
+
+    .contact__link {
+      color: var(--color-accent-secondary);
+      font-weight: 500;
+      position: relative;
+    }
+
+    .contact__link::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: var(--color-accent-secondary);
+      transition: width var(--transition-normal);
+    }
+
+    .contact__link:hover::after {
+      width: 100%;
+    }
 
 .footer{
 text-align:center;
@@ -401,17 +428,23 @@ I’m a Junior Web Developer & Data Analyst passionate about building elegant we
 </div>
 </section>
 
-<section id="contact" class="section">
-<h2 class="section__title">Contact</h2>
-<div class="contact__item">
-<div class="contact__icon"><i class="fas fa-envelope"></i></div>
-<a class="contact__link" href="mailto:jadsalameh514@gmail.com">jadsalameh514@gmail.com</a>
-</div>
-<div class="contact__item">
-<div class="contact__icon"><i class="fab fa-github"></i></div>
-<a class="contact__link" href="https://github.com/jad-sm" target="_blank">github.com/jad-sm</a>
-</div>
-</section>
+ <section id="contact" class="section contact" aria-labelledby="contact-title">
+      <h2 class="section__title" id="contact-title">Get In Touch</h2>
+      <div class="contact__content">
+        <div class="contact__item">
+          <span class="contact__icon" aria-hidden="true">
+            <i class="fas fa-envelope"></i>
+          </span>
+          <a class="contact__link" href="mailto:jadsalameh514@gmail.com">jadsalameh514@gmail.com</a>
+        </div>
+        <div class="contact__item">
+          <span class="contact__icon" aria-hidden="true">
+            <i class="fab fa-github"></i>
+          </span>
+          <a href="https://github.com/jad-sm" class="contact__link" target="_blank" rel="noopener noreferrer">github.com/jad-sm</a>
+        </div>
+      </div>
+    </section>
 
 <footer class="footer">
 © 2026 Jad Sm — All rights reserved
