--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
       backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; 
     }
     .project-card:hover { transform: translateY(-10px); border-color: var(--color-accent-secondary); }
+    .project-card__img-box { height: 180px; position: relative; overflow: hidden; }
+    .project-card__img-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s; }
+    .project-card:hover .project-card__img-box img { transform: scale(1.1); }
+    .project-card__overlay { position: absolute; inset: 0; background: linear-gradient(to bottom, transparent, rgba(15, 23, 42, 0.9)); }
     .project-card__content { padding: 1.5rem; }
-    .chart-container { width: 100%; height: 150px; margin-top: 1rem; }
+    .chart-mini-container { width: 100%; height: 80px; margin-top: 1rem; }
 
     /* --- Enhanced Footer --- */
     .footer { background: #020617; padding: 4rem 2rem 2rem; color: var(--color-text-secondary); text-align: center; }
@@ -136,7 +140,7 @@
     <section id="about" class="section">
         <h2 class="section__title">Professional Profile</h2>
         <p style="text-align: center; max-width: 750px; margin: 0 auto; color: var(--color-text-secondary); font-size: 1.1rem;">
-            I bridge the gap between complex data analysis and intuitive web interfaces. With a strong foundation in SQL and modern web stacks, I build applications that don't just work, but provide meaningful business value through data visualization.
+            I bridge the gap between complex data analysis and intuitive web interfaces. With a strong foundation in SQL and modern web stacks, I build applications that provide meaningful business value through data visualization.
         </p>
     </section>
 
@@ -179,10 +183,13 @@
       <div class="projects__grid">
         
         <article class="project-card">
-          <div style="height: 180px; background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/gestionvoyage.png') center/cover;"></div>
+          <div class="project-card__img-box">
+            <img src="images/gestionvoyage.png" alt="Travel Management Project">
+            <div class="project-card__overlay"></div>
+          </div>
           <div class="project-card__content">
             <h3>Travel Management System</h3>
-            <p style="font-size: 0.9rem; color: var(--color-text-secondary); margin: 10px 0;">A full-stack PHP/MySQL solution for booking and user authentication.</p>
+            <p style="font-size: 0.9rem; color: var(--color-text-secondary); margin-bottom: 1rem;">Full-stack PHP solution featuring secure user booking and destination management.</p>
             <div class="skills__grid">
                 <span style="font-size: 0.7rem;" class="skill-tag">PHP</span>
                 <span style="font-size: 0.7rem;" class="skill-tag">MySQL</span>
@@ -191,10 +198,16 @@
         </article>
 
         <article class="project-card">
+          <div class="project-card__img-box">
+            <img src="images/sales-analysis.png" alt="Sales Data Analysis Dashboard">
+            <div class="project-card__overlay"></div>
+          </div>
           <div class="project-card__content">
             <h3>Sales Insights Dashboard</h3>
-            <p style="font-size: 0.9rem; color: var(--color-text-secondary);">Automated data extraction from SQLite to generate monthly sales growth charts.</p>
-             <img src="images/sales-analysis.png" alt="Sales Data Analysis dashboard preview" loading="lazy" width="400" height="250">
+            <p style="font-size: 0.9rem; color: var(--color-text-secondary);">Automated extraction of KPI from SQLite. See below for a live preview of the trend logic:</p>
+            <div class="chart-mini-container">
+                <canvas id="salesChart"></canvas>
+            </div>
             <a href="https://github.com/jad-sm" class="navbar__link" style="font-size: 0.8rem; margin-top: 15px; display: inline-block;">View Code on GitHub →</a>
           </div>
         </article>
@@ -205,22 +218,22 @@
 
   <footer class="footer">
     <div class="footer__socials">
-        <a href="https://github.com/jad-sm" class="social-icon github" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/jad-sm" class="social-icon github" target="_blank">
             <i class="fab fa-github"></i>
         </a>
-        <a href="https://linkedin.com/in/jad-sm" class="social-icon linkedin" target="_blank" aria-label="LinkedIn">
+        <a href="https://linkedin.com/in/jad-sm" class="social-icon linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://wa.me/YOURNUMBER" class="social-icon whatsapp" target="_blank" aria-label="WhatsApp">
+        <a href="https://wa.me/YOUR_PHONE_NUMBER" class="social-icon whatsapp" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
-    <p style="margin-bottom: 0.5rem;">Let's build something impactful together.</p>
-    <p style="font-size: 0.8rem; opacity: 0.6;">&copy; 2026 Jad Sm. All Rights Reserved.</p>
+    <p>Let's build something impactful together.</p>
+    <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 10px;">&copy; 2026 Jad Sm. All Rights Reserved.</p>
   </footer>
 
   <script>
-    // --- Scroll Reveal ---
+    // Reveal animation
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) entry.target.classList.add('visible');
@@ -228,21 +241,18 @@
     }, { threshold: 0.1 });
     document.querySelectorAll('.section').forEach(s => observer.observe(s));
 
-    // --- Navbar Effect ---
     window.addEventListener('scroll', () => {
       const nav = document.querySelector('.navbar');
       window.scrollY > 50 ? nav.classList.add('scrolled') : nav.classList.remove('scrolled');
     });
 
-    // --- Skills Radar Chart ---
-    
+    // Skills Chart
     const ctxSkills = document.getElementById('skillsChart').getContext('2d');
     new Chart(ctxSkills, {
         type: 'radar',
         data: {
-            labels: ['Web Development', 'SQL & Databases', 'Data Visualization', 'Backend Logic', 'UI/UX Design'],
+            labels: ['Web Dev', 'SQL', 'Data Vis', 'Backend', 'UI Design'],
             datasets: [{
-                label: 'Proficiency',
                 data: [90, 85, 80, 75, 70],
                 backgroundColor: 'rgba(34, 211, 238, 0.2)',
                 borderColor: '#22d3ee',
@@ -251,22 +261,22 @@
             }]
         },
         options: {
-            scales: { r: { grid: { color: 'rgba(255,255,255,0.1)' }, angleLines: { color: 'rgba(255,255,255,0.1)' }, pointLabels: { color: '#94a3b8', font: { size: 12 } }, ticks: { display: false } } },
+            scales: { r: { grid: { color: 'rgba(255,255,255,0.1)' }, angleLines: { color: 'rgba(255,255,255,0.1)' }, pointLabels: { color: '#94a3b8' }, ticks: { display: false } } },
             plugins: { legend: { display: false } }
         }
     });
 
-    // --- Sales Mini Chart ---
+    // Sales Mini Chart
     const ctxSales = document.getElementById('salesChart').getContext('2d');
     new Chart(ctxSales, {
         type: 'line',
         data: {
-            labels: ['M1', 'M2', 'M3', 'M4', 'M5', 'M6'],
+            labels: ['M1', 'M2', 'M3', 'M4', 'M5'],
             datasets: [{
-                data: [30, 45, 35, 60, 55, 80],
+                data: [20, 40, 30, 70, 60],
                 borderColor: '#6366f1',
                 tension: 0.4,
-                borderWidth: 3,
+                borderWidth: 2,
                 pointRadius: 0,
                 fill: true,
                 backgroundColor: 'rgba(99, 102, 241, 0.1)'
