--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       overflow-x: hidden;
     }
 
-    /* --- Navigation --- */
     .navbar {
       position: fixed; top: 0; width: 100%; padding: 1.5rem;
       background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px);
@@ -50,7 +49,6 @@
     .navbar__link { color: var(--color-text-secondary); font-weight: 500; text-decoration: none; transition: 0.3s; }
     .navbar__link:hover { color: var(--color-accent-secondary); }
 
-    /* --- Hero --- */
     .hero { height: 100vh; display: flex; align-items: center; justify-content: center; text-align: center; position: relative; }
     .hero__content { z-index: 2; max-width: 800px; padding: 2rem; }
     .hero__title { font-size: clamp(2.5rem, 6vw, 4.5rem); margin-bottom: 1rem; }
@@ -62,30 +60,30 @@
     }
     .hero__cta:hover { transform: translateY(-3px); box-shadow: 0 0 40px rgba(99, 102, 241, 0.5); }
 
-    /* --- Sections --- */
     .section { padding: 100px 20px; max-width: 1100px; margin: 0 auto; opacity: 0; transform: translateY(30px); transition: 0.8s; }
     .section.visible { opacity: 1; transform: translateY(0); }
     .section__title { font-size: 2.5rem; text-align: center; margin-bottom: 3rem; }
     .section__title::after { content: ''; display: block; width: 50px; height: 4px; background: var(--color-accent-gradient); margin: 10px auto; border-radius: 10px; }
 
-    /* --- Skills Chart --- */
     .skills__container { display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center; }
     .skills__grid { display: flex; flex-wrap: wrap; gap: 10px; }
     .skill-tag { padding: 8px 16px; background: var(--color-bg-secondary); border-radius: var(--radius-full); border: 1px solid rgba(255,255,255,0.1); }
 
-    /* --- Experience Timeline --- */
     .experience__list { position: relative; border-left: 2px solid var(--color-bg-secondary); padding-left: 2rem; margin: 2rem 0; }
     .experience__item { margin-bottom: 2.5rem; position: relative; }
     .experience__item::before { content: ''; position: absolute; left: calc(-2rem - 6px); top: 5px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-accent-secondary); }
     .experience__date { font-size: 0.8rem; color: var(--color-accent-secondary); font-weight: 700; }
 
-    /* --- Project Cards --- */
     .projects__grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem; }
+    
+    .project-link { text-decoration: none; color: inherit; display: block; }
+
     .project-card { 
       background: var(--color-bg-secondary); border-radius: var(--radius-md); overflow: hidden; 
       backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; 
+      height: 100%;
     }
-    .project-card:hover { transform: translateY(-10px); border-color: var(--color-accent-secondary); }
+    .project-card:hover { transform: translateY(-10px); border-color: var(--color-accent-secondary); cursor: pointer; }
     .project-card__img-box { height: 180px; position: relative; overflow: hidden; }
     .project-card__img-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s; }
     .project-card:hover .project-card__img-box img { transform: scale(1.1); }
@@ -93,7 +91,6 @@
     .project-card__content { padding: 1.5rem; }
     .chart-mini-container { width: 100%; height: 80px; margin-top: 1rem; }
 
-    /* --- Enhanced Footer --- */
     .footer { background: #020617; padding: 4rem 2rem 2rem; color: var(--color-text-secondary); text-align: center; }
     .footer__socials { display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 2rem; }
     .social-icon { 
@@ -182,20 +179,23 @@
       <h2 class="section__title">Selected Projects</h2>
       <div class="projects__grid">
         
-        <article class="project-card">
-          <div class="project-card__img-box">
-            <img src="images/gestionvoyage.png" alt="Travel Management Project">
-            <div class="project-card__overlay"></div>
-          </div>
-          <div class="project-card__content">
-            <h3>Travel Management System</h3>
-            <p style="font-size: 0.9rem; color: var(--color-text-secondary); margin-bottom: 1rem;">Full-stack PHP solution featuring secure user booking and destination management.</p>
-            <div class="skills__grid">
-                <span style="font-size: 0.7rem;" class="skill-tag">PHP</span>
-                <span style="font-size: 0.7rem;" class="skill-tag">MySQL</span>
+        <a href="https://jad-sm.github.io/GestionVoyage/" target="_blank" class="project-link">
+          <article class="project-card">
+            <div class="project-card__img-box">
+              <img src="images/gestionvoyage.png" alt="Travel Management Project">
+              <div class="project-card__overlay"></div>
             </div>
-          </div>
-        </article>
+            <div class="project-card__content">
+              <h3>Travel Management System</h3>
+              <p style="font-size: 0.9rem; color: var(--color-text-secondary); margin-bottom: 1rem;">Full-stack PHP solution featuring secure user booking and destination management.</p>
+              <div class="skills__grid">
+                  <span style="font-size: 0.7rem;" class="skill-tag">PHP</span>
+                  <span style="font-size: 0.7rem;" class="skill-tag">MySQL</span>
+              </div>
+              <p style="font-size: 0.8rem; margin-top: 15px; color: var(--color-accent-secondary);">View Live Demo →</p>
+            </div>
+          </article>
+        </a>
 
         <article class="project-card">
           <div class="project-card__img-box">
@@ -233,7 +233,6 @@
   </footer>
 
   <script>
-    // Reveal animation
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) entry.target.classList.add('visible');
@@ -246,7 +245,6 @@
       window.scrollY > 50 ? nav.classList.add('scrolled') : nav.classList.remove('scrolled');
     });
 
-    // Skills Chart
     const ctxSkills = document.getElementById('skillsChart').getContext('2d');
     new Chart(ctxSkills, {
         type: 'radar',
@@ -266,7 +264,7 @@
         }
     });
 
-    // Sales Mini Chart
+  
     const ctxSales = document.getElementById('salesChart').getContext('2d');
     new Chart(ctxSales, {
         type: 'line',
