--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
           <span class="skill-tag">Power BI</span>
           <span class="skill-tag">Data Visualization</span>
           <span class="skill-tag">RESTful APIs</span>
+          <span class="skill-tag">HTML</span> 
+           <span class="skill-tag">CSS</span> 
+           <span class="skill-tag">JS</span> 
         </div>
         <div>
           <canvas id="skillsChart"></canvas>
