--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
 
     .skills__container { display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center; }
     .skills__grid { display: flex; flex-wrap: wrap; gap: 10px; }
-    .skill-tag { padding: 8px 16px; background: var(--color-bg-secondary); border-radius: var(--radius-full); border: 1px solid rgba(255,255,255,0.1); }
+    .skill-tag { padding: 8px 16px; background: var(--color-bg-secondary); border-radius: var(--radius-full); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
+    .skill-tag:hover { background: var(--color-accent-primary); color: white; transform: scale(1.05); border-color: var(--color-accent-secondary); }
 
     .experience__list { position: relative; border-left: 2px solid var(--color-bg-secondary); padding-left: 2rem; margin: 2rem 0; }
-    .experience__item { margin-bottom: 2.5rem; position: relative; }
-    .experience__item::before { content: ''; position: absolute; left: calc(-2rem - 6px); top: 5px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-accent-secondary); }
+    .experience__item { margin-bottom: 2.5rem; position: relative; transition: 0.3s; }
+    .experience__item:hover { transform: translateX(10px); }
+    .experience__item::before { content: ''; position: absolute; left: calc(-2rem - 6px); top: 5px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-accent-secondary); transition: 0.3s; }
+    .experience__item:hover::before { background: var(--color-text-primary); box-shadow: 0 0 10px var(--color-accent-secondary); }
     .experience__date { font-size: 0.8rem; color: var(--color-accent-secondary); font-weight: 700; }
 
     .projects__grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem; }
@@ -80,14 +83,15 @@
 
     .project-card { 
       background: var(--color-bg-secondary); border-radius: var(--radius-md); overflow: hidden; 
-      backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; 
+      backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
       height: 100%;
     }
-    .project-card:hover { transform: translateY(-10px); border-color: var(--color-accent-secondary); cursor: pointer; }
+    .project-card:hover { transform: translateY(-15px) scale(1.02); border-color: var(--color-accent-secondary); box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
     .project-card__img-box { height: 180px; position: relative; overflow: hidden; }
-    .project-card__img-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s; }
-    .project-card:hover .project-card__img-box img { transform: scale(1.1); }
-    .project-card__overlay { position: absolute; inset: 0; background: linear-gradient(to bottom, transparent, rgba(15, 23, 42, 0.9)); }
+    .project-card__img-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.6s; }
+    .project-card:hover .project-card__img-box img { transform: scale(1.1) rotate(2deg); }
+    .project-card__overlay { position: absolute; inset: 0; background: linear-gradient(to bottom, transparent, rgba(15, 23, 42, 0.9)); opacity: 0.8; transition: 0.3s; }
+    .project-card:hover .project-card__overlay { opacity: 0.4; }
     .project-card__content { padding: 1.5rem; }
     .chart-mini-container { width: 100%; height: 80px; margin-top: 1rem; }
 
@@ -96,9 +100,9 @@
     .social-icon { 
         width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; 
         background: var(--color-bg-secondary); color: white; border-radius: 50%; 
-        font-size: 1.3rem; text-decoration: none; transition: 0.3s; border: 1px solid rgba(255,255,255,0.05);
+        font-size: 1.3rem; text-decoration: none; transition: 0.4s; border: 1px solid rgba(255,255,255,0.05);
     }
-    .social-icon:hover { transform: translateY(-5px); color: white; }
+    .social-icon:hover { transform: translateY(-8px) rotate(360deg); color: white; box-shadow: var(--shadow-glow); }
     .social-icon.github:hover { background: #333; }
     .social-icon.linkedin:hover { background: #0077b5; }
     .social-icon.whatsapp:hover { background: #25d366; }
@@ -153,8 +157,8 @@
           <span class="skill-tag">Data Visualization</span>
           <span class="skill-tag">RESTful APIs</span>
           <span class="skill-tag">HTML</span> 
-           <span class="skill-tag">CSS</span> 
-           <span class="skill-tag">JS</span> 
+          <span class="skill-tag">CSS</span> 
+          <span class="skill-tag">JS</span> 
         </div>
         <div>
           <canvas id="skillsChart"></canvas>
@@ -232,7 +236,7 @@
         </a>
     </div>
     <p>Let's build something impactful together.</p>
-    <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 10px;">&copy; 2026 Jad Sm. All Rights Reserved.</p>
+    <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 10px;">&copy; 2026 Jad Salameh. All Rights Reserved.</p>
   </footer>
 
   <script>
@@ -267,7 +271,6 @@
         }
     });
 
-  
     const ctxSales = document.getElementById('salesChart').getContext('2d');
     new Chart(ctxSales, {
         type: 'line',
