--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Jad Sm - Web Developer & Data Analyst Portfolio">
-  <title>Jad Sm | Web Developer & Data Analyst</title>
+  <title>Jad Salameh | Web Developer & Data Analyst</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,6 @@
       --font-primary: 'Inter', sans-serif;
       --radius-md: 12px;
       --radius-full: 50px;
-      --shadow-glow: 0 0 30px rgba(99, 102, 241, 0.3);
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -56,7 +55,7 @@
     .hero__cta { 
         display: inline-flex; align-items: center; gap: 0.8rem; padding: 1rem 2rem; 
         background: var(--color-accent-gradient); color: white; border-radius: var(--radius-full);
-        text-decoration: none; font-weight: 600; box-shadow: var(--shadow-glow); transition: 0.3s;
+        text-decoration: none; font-weight: 600; box-shadow: 0 0 20px rgba(99, 102, 241, 0.3); transition: 0.3s;
     }
     .hero__cta:hover { transform: translateY(-3px); box-shadow: 0 0 40px rgba(99, 102, 241, 0.5); }
 
@@ -67,45 +66,45 @@
 
     .skills__container { display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center; }
     .skills__grid { display: flex; flex-wrap: wrap; gap: 10px; }
-    .skill-tag { padding: 8px 16px; background: var(--color-bg-secondary); border-radius: var(--radius-full); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
-    .skill-tag:hover { background: var(--color-accent-primary); color: white; transform: scale(1.05); border-color: var(--color-accent-secondary); }
+    .skill-tag { padding: 8px 16px; background: var(--color-bg-secondary); border-radius: var(--radius-full); border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; cursor: default; }
+    .skill-tag:hover { background: var(--color-accent-primary); color: white; transform: scale(1.1); border-color: var(--color-accent-secondary); }
 
     .experience__list { position: relative; border-left: 2px solid var(--color-bg-secondary); padding-left: 2rem; margin: 2rem 0; }
-    .experience__item { margin-bottom: 2.5rem; position: relative; transition: 0.3s; }
-    .experience__item:hover { transform: translateX(10px); }
+    .experience__item { margin-bottom: 2.5rem; position: relative; transition: 0.4s ease; }
+    .experience__item:hover { transform: translateX(15px); }
     .experience__item::before { content: ''; position: absolute; left: calc(-2rem - 6px); top: 5px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-accent-secondary); transition: 0.3s; }
-    .experience__item:hover::before { background: var(--color-text-primary); box-shadow: 0 0 10px var(--color-accent-secondary); }
+    .experience__item:hover::before { background: #fff; box-shadow: 0 0 15px var(--color-accent-secondary); transform: scale(1.5); }
     .experience__date { font-size: 0.8rem; color: var(--color-accent-secondary); font-weight: 700; }
 
     .projects__grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem; }
-    
     .project-link { text-decoration: none; color: inherit; display: block; }
 
     .project-card { 
       background: var(--color-bg-secondary); border-radius: var(--radius-md); overflow: hidden; 
-      backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+      backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
       height: 100%;
     }
-    .project-card:hover { transform: translateY(-15px) scale(1.02); border-color: var(--color-accent-secondary); box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
+    .project-card:hover { transform: translateY(-15px); border-color: var(--color-accent-secondary); box-shadow: 0 20px 50px rgba(0,0,0,0.5); }
     .project-card__img-box { height: 180px; position: relative; overflow: hidden; }
-    .project-card__img-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.6s; }
-    .project-card:hover .project-card__img-box img { transform: scale(1.1) rotate(2deg); }
-    .project-card__overlay { position: absolute; inset: 0; background: linear-gradient(to bottom, transparent, rgba(15, 23, 42, 0.9)); opacity: 0.8; transition: 0.3s; }
-    .project-card:hover .project-card__overlay { opacity: 0.4; }
+    .project-card__img-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.8s ease; }
+    .project-card:hover .project-card__img-box img { transform: scale(1.15) rotate(-1deg); }
+    .project-card__overlay { position: absolute; inset: 0; background: linear-gradient(to bottom, transparent, rgba(15, 23, 42, 0.9)); opacity: 0.8; transition: 0.4s; }
+    .project-card:hover .project-card__overlay { opacity: 0.3; }
     .project-card__content { padding: 1.5rem; }
-    .chart-mini-container { width: 100%; height: 80px; margin-top: 1rem; }
 
     .footer { background: #020617; padding: 4rem 2rem 2rem; color: var(--color-text-secondary); text-align: center; }
     .footer__socials { display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 2rem; }
     .social-icon { 
-        width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; 
+        width: 55px; height: 55px; display: flex; align-items: center; justify-content: center; 
         background: var(--color-bg-secondary); color: white; border-radius: 50%; 
-        font-size: 1.3rem; text-decoration: none; transition: 0.4s; border: 1px solid rgba(255,255,255,0.05);
+        font-size: 1.4rem; text-decoration: none; transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55); 
+        border: 1px solid rgba(255,255,255,0.05);
     }
-    .social-icon:hover { transform: translateY(-8px) rotate(360deg); color: white; box-shadow: var(--shadow-glow); }
-    .social-icon.github:hover { background: #333; }
-    .social-icon.linkedin:hover { background: #0077b5; }
-    .social-icon.whatsapp:hover { background: #25d366; }
+    .social-icon:hover { transform: translateY(-10px) rotate(360deg); color: white; }
+    
+    .social-icon.github:hover { background: #333; box-shadow: 0 0 25px rgba(255, 255, 255, 0.2); }
+    .social-icon.linkedin:hover { background: #0077b5; box-shadow: 0 0 25px rgba(0, 119, 181, 0.5); }
+    .social-icon.whatsapp:hover { background: #25d366; box-shadow: 0 0 25px rgba(37, 211, 102, 0.5); }
 
     @media (max-width: 768px) {
       .skills__container { grid-template-columns: 1fr; }
@@ -156,9 +155,9 @@
           <span class="skill-tag">Power BI</span>
           <span class="skill-tag">Data Visualization</span>
           <span class="skill-tag">RESTful APIs</span>
-          <span class="skill-tag">HTML</span> 
-          <span class="skill-tag">CSS</span> 
-          <span class="skill-tag">JS</span> 
+          <span class="skill-tag">HTML5</span> 
+          <span class="skill-tag">CSS3</span> 
+          <span class="skill-tag">Modern JS</span> 
         </div>
         <div>
           <canvas id="skillsChart"></canvas>
@@ -212,7 +211,7 @@
           <div class="project-card__content">
             <h3>Sales Insights Dashboard</h3>
             <p style="font-size: 0.9rem; color: var(--color-text-secondary);">Automated extraction of KPI from SQLite. See below for a live preview of the trend logic:</p>
-            <div class="chart-mini-container">
+            <div style="width: 100%; height: 80px; margin-top: 1rem;">
                 <canvas id="salesChart"></canvas>
             </div>
             <a href="https://github.com/jad-sm" class="navbar__link" style="font-size: 0.8rem; margin-top: 15px; display: inline-block;">View Code on GitHub →</a>
